<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/toolbar" />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    android:orientation="vertical"
            android:layout_marginTop="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="@style/padding_default">
            <TextView
                    android:id="@+id/lblName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_name"
                    style="@style/marginEnd_default"/>
            <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Charmander"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="150dp"
                android:layout_height="150dp">

            <ImageView
                    android:id="@+id/imvPokemon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="@style/padding_default">
            <TextView
                    android:id="@+id/lblWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_weight"
                    style="@style/marginEnd_default"/>
            <TextView
                    android:id="@+id/txtWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="5"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="@style/padding_default">
            <TextView
                    android:id="@+id/lblSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_size"
                    style="@style/marginEnd_default"/>
            <TextView
                    android:id="@+id/txtSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="2"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="@style/padding_default">
            <TextView
                    android:id="@+id/lblType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_type"
                    style="@style/marginEnd_default"/>
            <TextView
                    android:id="@+id/txtType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Tipo 1"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="@style/padding_default">
            <TextView
                    android:id="@+id/lblAbility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_ability"
                    style="@style/marginEnd_default"/>
            <TextView
                    android:id="@+id/txtAbility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Habilidade 1"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="@style/padding_default">
            <TextView
                    android:id="@+id/lblSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_speed"
                    style="@style/marginEnd_default"/>
            <TextView
                    android:id="@+id/txtSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="2"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="@style/padding_default">
            <TextView
                    android:id="@+id/lblDefense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_defense"
                    style="@style/marginEnd_default"/>
            <TextView
                    android:id="@+id/txtDefense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="2"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="@style/padding_default">
            <TextView
                    android:id="@+id/lblAttack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_attack"
                    style="@style/marginEnd_default"/>
            <TextView
                    android:id="@+id/txtAttack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="2"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="@style/padding_default">
            <TextView
                    android:id="@+id/lblHp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_hp"
                    style="@style/marginEnd_default"/>
            <TextView
                    android:id="@+id/txtHp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="2"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>